
message KObject {

	message Cluster {
		required string id = 1;
	}

	message AnotherEmbeddedKObject {
		required int32 aField = 1;
	}
	message EmbeddedKObject {
		required int32 aField = 1;
	}

	required EmbeddedKObject embedded = 1;
	required EmbeddedKObject anotherEmbedded = 2;
	required Cluster = 3;

}